--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src/**/*", "declarations.d.ts"],
+  "include": ["src"],
   "exclude": ["node_modules"]
 }
